# sellers-dashboard

./: .dockerignore  .env.example  .gitattributes  .gitignore  .railwayignore  CLAUDE.md  PLAN.md  POSTMORTEM.md  Procfile  README.md  SCC_Profitability_Dashboard2.html  data_issue.md  docker-compose.yml  next.md  railway.json
.github/workflows/: agent.yml  backend.yml  go-agent.yml
agent/: README.md  build.py  pyproject.toml
agent/installer/: install.ps1  uninstall.ps1  version.txt
agent/scc_agent/: __main__.py  config.py  creds.py  logging_setup.py  state.py  sync.py  uploader.py  watcher.py
agent/tests/: test_creds.py  test_state.py  test_uploader_signing.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py  db.py  deps.py  main.py  redis_client.py  security.py  seed.py  seed_admin.py  seed_data.json  settings.py
backend/app/models/: __init__.py  api_key.py  audit.py  project.py  snapshot.py  tenant.py  user.py
backend/app/routers/: admin.py  auth.py  dashboard.py  ingest.py  static.py
backend/app/schemas/: admin.py  auth.py  dashboard.py  ingest.py
backend/app/services/: accounting.py  parser.py  rate_limit.py  storage.py
backend/app/workers/: parse_snapshot.py
backend/tests/: conftest.py  test_accounting.py  test_parser.py  test_security.py
dashboard/: README.md  admin.html  index.html  login.html  register.html
docs/: admin-runbook.md  customer-install.md
go_agent/: .gitignore  Makefile  README.md  go.mod  go.sum
go_agent/cmd/scc-agent/: gui_other.go  gui_windows.go  install_other.go  install_windows.go  main.go  manifest.xml  run_other.go  run_windows.go  versioninfo.json
go_agent/installer/: install.ps1  uninstall.ps1
go_agent/internal/app/: run.go
go_agent/internal/arp/: arp_other.go  arp_windows.go
go_agent/internal/config/: config.go
go_agent/internal/creds/: creds.go  creds_other.go  creds_windows.go
(+11 files in other folders)
